<resources>
    <string name="app_name">Laza app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_headding">Welcome</string>
    <string name="login_headding2">Please enter your data to continue</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="term_condition">By connecting your account confirm that you agree with our Term and Condition</string>
    <string name="register_heading">Sign Up</string>
    <string name="already">Already have an Account?</string>
    <string name="hello">Hello</string>
    <string name="welcome_to_laza">Welcome to Laza.</string>
    <string name="choose_brand">Choose Brand</string>
    <string name="view_all">View All</string>
    <string name="new_arraival">New Arraival</string>
</resources>